# firmware-stm3210fx1

./: .gitignore  Makefile.am  Makefile.in  README  README.md  config.h  config.status  configure  configure.ac
autom4te.cache/: output.0  requests  traces.0  traces.1
doc/: Doxyfile  Makefile.am  Makefile.in
src/: Makefile.am  Makefile.in
src/Source/: main.c
src/Source/.deps/: firmware_stm3210fx1-main.Po
src/common/: openocd.cfg
